# videoeditor

./: .gitignore  CMakeLists.txt  imgui.ini  results.json
sandbox/: CMakeLists.txt  renderfile.cpp
src/: main.cpp  ui.h
src/application/: import.hpp  render.cpp  render.hpp  renderfile.hpp  renderoutput.hpp
src/debug/: log.hpp  profile.hpp
src/domain/: shadercomponent.cpp  shadercomponent.hpp  timeline.cpp  timeline.hpp
src/infrastructure/: ffmpeg.cpp  ffmpeg.h  implglfw.h  opengl.cpp  opengl.h  timelinewalker.cpp  timelinewalker.hpp  videowriter.hpp
